--- a/app/public/home.html
+++ b/app/public/home.html
@@ -20,8 +20,7 @@
     <div class="jumbotron">
       <h1><i class="fas fa-child"></i> Friend Finder</h1>
       <hr>
-      <h2>Answer a few short questions. </h2>
-      <h2>Then find the friend with the greatest compatibility!</h2>
+      <h2>Answer a few short questions, find a new friend for life!</h2>
       <br>
 
       <div>
@@ -32,7 +31,7 @@
 
     <footer class="footer">
       <div class="container">
-        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/LauraAWard/FriendFinder">GitHub Repository</a></p>
+        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/LauraAWard/FriendFinder" target="_blank">GitHub Repository</a></p>
       </div>
     </footer>
 
