--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -9,7 +9,7 @@
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
@@ -38,9 +38,9 @@
     <select class="chosen-select" id="q1">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
+      <option value="2">2 (Somewhat Disagree)</option>
+      <option value="3">3 (Neither Agree nor Disagree)</option>
+      <option value="4">4 (Somewhat Agree)</option>
       <option value="5">5 (Strongly Agree)</option>
     </select>
 
@@ -49,9 +49,9 @@
     <select class="chosen-select" id="q2">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
+      <option value="2">2 (Somewhat Disagree)</option>
+      <option value="3">3 (Neither Agree nor Disagree)</option>
+      <option value="4">4 (Somewhat Agree)</option>
       <option value="5">5 (Strongly Agree)</option>
     </select>
 
@@ -61,9 +61,9 @@
     <select class="chosen-select" id="q3">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
+      <option value="2">2 (Somewhat Disagree)</option>
+      <option value="3">3 (Neither Agree nor Disagree)</option>
+      <option value="4">4 (Somewhat Agree)</option>
       <option value="5">5 (Strongly Agree)</option>
     </select>
 
@@ -73,9 +73,9 @@
     <select class="chosen-select" id="q4">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
+      <option value="2">2 (Somewhat Disagree)</option>
+      <option value="3">3 (Neither Agree nor Disagree)</option>
+      <option value="4">4 (Somewhat Agree)</option>
       <option value="5">5 (Strongly Agree)</option>
     </select>
 
@@ -85,9 +85,9 @@
     <select class="chosen-select" id="q5">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
+      <option value="2">2 (Somewhat Disagree)</option>
+      <option value="3">3 (Neither Agree nor Disagree)</option>
+      <option value="4">4 (Somewhat Agree)</option>
       <option value="5">5 (Strongly Agree)</option>
     </select>
 
@@ -97,9 +97,9 @@
     <select class="chosen-select" id="q6">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
+      <option value="2">2 (Somewhat Disagree)</option>
+      <option value="3">3 (Neither Agree nor Disagree)</option>
+      <option value="4">4 (Somewhat Agree)</option>
       <option value="5">5 (Strongly Agree)</option>
     </select>
 
@@ -109,9 +109,9 @@
     <select class="chosen-select" id="q7">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
+      <option value="2">2 (Somewhat Disagree)</option>
+      <option value="3">3 (Neither Agree nor Disagree)</option>
+      <option value="4">4 (Somewhat Agree)</option>
       <option value="5">5 (Strongly Agree)</option>
     </select>
 
@@ -120,20 +120,20 @@
     <select class="chosen-select" id="q8">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
+      <option value="2">2 (Somewhat Disagree)</option>
+      <option value="3">3 (Neither Agree nor Disagree)</option>
+      <option value="4">4 (Somewhat Agree)</option>
       <option value="5">5 (Strongly Agree)</option>
     </select>
 
     <h3><strong>Question 9</strong></h3>
-    <h4>If a friend I haven't heard from in a while calls out of the blue and wants me to drop everything to hang out that very night, I feel justified ignoring the message.  Where was she when I needed her?</h4>
+    <h4>When I ask a friend for a favor, I expect them to follow through.</h4>
     <select class="chosen-select" id="q9">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
+      <option value="2">2 (Somewhat Disagree)</option>
+      <option value="3">3 (Neither Agree nor Disagree)</option>
+      <option value="4">4 (Somewhat Agree)</option>
       <option value="5">5 (Strongly Agree)</option>
     </select>
 
@@ -142,11 +142,11 @@
     <select class="chosen-select" id="q10">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
+      <option value="2">2 (Somewhat Disagree)</option>
+      <option value="3">3 (Neither Agree nor Disagree)</option>
+      <option value="4">4 (Somewhat Agree)</option>
       <option value="5">5 (Strongly Agree)</option>
-    </select>
+   </select>
 
     <br>
     <br>
@@ -158,7 +158,7 @@
     <hr>
     <footer class="footer">
       <div class="container">
-        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/LauraAWard/FriendFinder">GitHub Repository</a></p>
+        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/LauraAWard/FriendFinder" target="_blank">GitHub Repository</a></p>
       </div>
     </footer>
 
@@ -197,7 +197,7 @@
   </div>
 
   <script type="text/javascript">
-   
+   //Using Chosen pluigin for drop down fields
     var config = {
       ".chosen-select": {},
       ".chosen-select-deselect": {
